- In string and character literals, treat illegal escape sequences 
  (e.g. "\%" or "\0") as an error instead of a warning.
- Upgraded Flocq to version 2.4.0.


Release 2.4, 2014-09-17
=======================

Language features:
- Support C99 compound literals  (ISO C99 section 6.5.2.5).
- Support "switch" statements over an argument of type "long long".

Code generation and optimization:
- Revised and improved support for single-precision floating-point
  arithmetic.  Earlier, all FP arithmetic was performed at double
  precision, with conversions to/from single precision as needed,
  in particular when loading/storing a single-precision FP number
  from/to memory.  Now, FP operations whose arguments are of type
  "float" are performed in single-precision, using the processor's
  single FP instructions.  Fewer conversions between double and
  single precision are generated.
- Value analysis and constant propagation: more precise treatment of
  comparisons against an integer constant.

Improvements in confidence:
- Full correctness proofs for the algorithms used in the runtime
  support library for conversions between 64-bit integers and
  floating-point numbers.

ARM port:
- Added support for Thumb2 instruction encoding (option -mthumb).
  Thumb2 is supported on ARMv7 and up, and produces more compact
  machine code.
- Exploit some VFPv3 instructions when available.
- Built-in function '__builtin_cntlz' (count leading zeros)
  renamed '__builtin_clz' for GCC / Clang compatibility.

PowerPC port:
- Refactored the expansion of built-in functions and
  pseudo-instructions so that it does not need to be re-done in
  cchecklink.
- Updated the cchecklink validator accordingly.
- More efficient code generated for volatile accesses to small data areas.
- Built-in function '__builtin_cntlz' (count leading zeros)
  renamed '__builtin_clz' for GCC / Clang compatibility.

IA32 port:
- Added built-in functions __builtin_clz and __builtin_ctz
  (count leading / trailing zeros).