@@ -1,7 +1,8 @@
 - In string and character literals, treat illegal escape sequences 
   (e.g. "\%" or "\0") as an error instead of a warning.
 - Upgraded Flocq to version 2.4.0.
-
+- cchecklink: added option "-files-from" to read .sdump file names
+    from a file or from standard input.	  
 
 Release 2.4, 2014-09-17
 =======================
